# mex-it

./: .gitignore  .travis.yml  .travis.yml.osx  CMakeLists.txt  FindEIGEN.cmake  FindOCTAVE.cmake  LICENSE  Makefile  README.md  appveyor.yml  call_mex.h  eigen_add.cpp  eigen_example.cpp  eigen_vector_example.cpp  eigen_vector_int_example.cpp  example_mex_function.cxx  mex-it.h  mex_function.cpp  mex_function.h  mex_stuff.h  mex_traits.h  mex_wrap.cxx  simp.m  simple_example.cpp  test_eig_add.cpp  test_eig_mult.cpp  test_eigen_add.m  test_eigen_vector_example.m  test_eigen_vector_int_example.m  test_mex.cpp  test_types.m  test_vector_add.cpp  test_vector_example.m  vector_example.cpp  vector_int_example.cpp
cmake_modules/: FindEIGEN.cmake  FindMATLAB.cmake  FindOCTAVE.cmake
components/: mex_stuff.h  mex_traits.h
test/: CMakeLists.txt  eigen_vector_example.cpp  eigex.m  simple_example.cpp  test_eigen_matrix_example.m  test_eigen_vector_example.m  test_simple_example.m  test_vector_add.cpp  test_vector_add.m  test_vector_example.m  test_vector_int_example.m  types_example.cpp
